engine/tests/fixtures/invalid/http-cache/cap-get-task.tg
capability cap_get_task {
  name "Get Task"
  description "Gets a task"

  actors [actor_user]
  reads [entity_task]
  input [shape_input_get_task]
  output [shape_output_task_detail]

  status active
}
